# IA_C

./: CMakeLists.txt  ciao.txt  malloc  puntatori1
SwitchCase/: switchCase.c  switchcase
alberiBR/: alberi1.c
array/: CMakeLists.txt  array1.c
esame/: liste  liste_merge.c  potenze  potenze.c  swap  swap.c
helloworld/: CMakeLists.txt  helloworld.c
liste/: DoubleLinked.c  Liste2.c  liste1.c  listeDoppie.c  listeplay.c
liste/DoublyLinkedList/: list.c  list.h  prova.c
mcd/: main.c  mcd.c  mcd.h
oridnamento/: insertion_sorting.c  insertionsorting  quick_sorting.c
programmazioneDinamica/: coefficenteBinomiale.c  fibonacciAlg.c
puntatori/: malloc.c  puntatori1.c  puntatori2.c  puntatori_mcd.c  puntatori_raddoppia.c
puntatori1.dSYM/Contents/: Info.plist
puntatori1.dSYM/Contents/Resources/DWARF/: puntatori1
sequenze/: Sequenze2.c
strutture/: strutture1.c  struttureWho.c  strutture_intro.cpp
tipi di dato/: tipididato  tipididato.c
